# torchmd-net

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.md  conda_deps_linux.txt  conda_deps_linux_aarch64.txt  conda_deps_osx.txt  conda_deps_win.txt  config.yaml  environment.yml  pyproject.toml  requirements.txt  scripts  setup.cfg  setup.py  train.py
.github/workflows/: CI.yml  docs.yaml  docs.yml  docs_build.yaml  publish.yml  test.yml  workflow.yml
benchmarks/: README.md  benchmark_speed.ipynb  graph_network.ipynb  inference.py  neighbors.py
cibuildwheel_support/: before_all_linux.sh  before_all_windows.sh  prepare_build_environment_linux.sh  prepare_build_environment_linux_cpu.sh  prepare_build_environment_linux_cu118.sh  prepare_build_environment_osx.sh  prepare_build_environment_windows.sh  prepare_build_environment_windows_cpu.sh  prepare_build_environment_windows_cu118.sh  prepare_build_environment_windows_cu124.sh
docs/: environment.yml  requirements.txt
docs/_static/: style.css
docs/source/: api.rst  conf.py  datasets.rst  index.rst  installation.rst  models.rst  modules.rst  priors.rst  torchmd-train.rst  usage.rst
examples/: COMP6v2eval.yaml  ET-ANI1.yaml  ET-MD17.yaml  ET-QM9.yaml  ET-SPICE.yaml  README.md  TensorNet-ANI1X.yaml  TensorNet-ANI2X.yaml  TensorNet-MACEOFF.yaml  TensorNet-QM9.yaml  TensorNet-SPICE.yaml  TensorNet-rMD17.yaml  default_config.yaml  example.yaml  graph-network.yaml  openmm-integration.py  train.sh  train_GN_ANI1.sh  train_GN_MD17.sh  train_GN_QM9.sh  train_schnet.yaml  train_soap.yaml
examples/aceff_examples/: README.md  aceff.py  ase_aceff.py  ase_aceff_PBC.py  batched_minimization_and_md.py  traj.xyz
examples/pretrained/ANI1-equivariant_transformer/: hparams.yaml  metrics.csv
examples/pretrained/ANI1-transformer/: hparams.yaml  metrics.csv
examples/pretrained/md17-aspirin-graph-network/: hparams.yaml  metrics.csv  splits.npz
notebooks/: Chignolin.ipynb  Chignolin_Emil.ipynb  generate_trpcage_coords.ipynb
scripts/: simulate.py  train.py  train_2.py  train_schnet.py  train_soap.py
src/: data.py  module.py  torchmd_gn.py  train.py  utils.py
src/models/: __init__.py  model.py  torchmd_gn.py  torchmd_t.py  utils.py
tests/: expected.pkl  priors.yaml  test_calculator.py  test_cfconv.py  test_datamodule.py  test_dataset_comp6.py  test_datasets.py  test_equivariance.py  test_examples.py  test_export.py  test_forward.py  test_mdcath.py  test_model.py  test_model_utils.py  test_module.py  test_neigbors.py  test_neighbors.py  test_onnx.py  test_optimize.py  test_prior_d2.py  test_priors.py  test_rbfs.py  test_staticshapes.py  test_utils.py  test_warp_ops.py  test_wrappers.py  utils.py
torchmdnet/: __init__.py  _version.py  calculators.py  data.py  examples_utils.py  loss.py  module.py  optimize.py  options.py  priors.py  utils.py
torchmdnet/calculators/: __init__.py  torchmdcalc.py
torchmdnet/data/: __init__.py
torchmdnet/datasets/: __init__.py  ace.py  ani.py  ani1.py  ani1x.py  artificial_short_range.py  cg.py  comp6.py  custom.py  genentech.py  hdf.py  maceoff.py  md17.py  md22.py  mdcath.py  memdataset.py  qm9.py  qm9q.py  spice.py  water.py
torchmdnet/extensions/: __init__.py  extensions.cpp  neighbor_utils.py  neighbors.py  neighbors_cpu_mem.py  ops.py  torchmdnet_extensions.cpp  torchmdnet_extensions_hip.cpp  triton_brute.py  triton_cell.py  triton_cell_v2.py  triton_neighbors.py  triton_shared.py  triton_sorted_cell_list.py
torchmdnet/extensions/neighbors/: common.cuh  common_hip.cuh  neighbors_cpu.cpp  neighbors_cuda.cu  neighbors_cuda_brute.cuh  neighbors_cuda_cell.cuh  neighbors_cuda_shared.cuh  neighbors_hip.hip  neighbors_hip_brute.cuh  neighbors_hip_cell.cuh  neighbors_hip_shared.cuh
torchmdnet/extensions/warp_kernels/: __init__.py  compose_tensor.py  decompose_tensor.py  equivariant_o3_matmul.py  equivariant_so3_matmul.py  graph_transform.py  neighbors_brute.py  neighbors_cell.py  tensor_norm3.py  tensornet_mp.py  tensornet_radial_mp.py  utils.py
torchmdnet/extensions/warp_ops/: __init__.py  compose_tensor.py  decompose_tensor.py  equivariant_o3_matmul.py  equivariant_so3_matmul.py  graph_transform.py  neighbors.py  tensor_norm3.py  tensornet_mp.py  tensornet_radial_mp.py
torchmdnet/messages/: __init__.py  messages.cpp  messages_cpu.cpp  messages_cuda.cu
torchmdnet/models/: __init__.py  model.py  output_modules.py  tensornet.py  tensornet2.py  torchmd_et.py  torchmd_gn.py  torchmd_t.py  utils.py  wrappers.py
torchmdnet/neighbors/: __init__.py  backwards.cu  common.cuh  demo.ipynb  demo.py  neighbors.cpp  neighbors_cpu.cpp  neighbors_cuda.cu  neighbors_cuda_brute.cuh  neighbors_cuda_cell.cu  neighbors_cuda_cell.cuh  neighbors_cuda_shared.cuh  test_neighbors.py
torchmdnet/priors/: __init__.py  atomref.py  base.py  coulomb.py  d2.py  zbl.py
torchmdnet/scripts/: eval.py  train.py
torchmdnet2/: data.py  simulation.py  utils.py
torchmdnet2/dataset/: __init__.py  chignolin.py  data_module.py  silicon.py  utils.py
torchmdnet2/geometry/: __init__.py  features.py  geometry.py  statistics.py
torchmdnet2/models/: __init__.py  cgnet.py  mlp.py  module.py  schnet.py  soap_mlp.py  sparse_gaussian_process.py  utils.py
torchmdnet2/neighbor_list/: __init__.py  ase_impl.py  torch_impl.py
torchmdnet2/nn/: __init__.py  cgnet.py  cutoff.py  interpolator.py  math_utils.py  priors.py  radial_basis.py  sparse_kernels.py  torchmd_gn.py
torchmdnet2/nn/spherical_equivariants/: __init__.py  spherical_expansion.py
torchmdnet2/nn/spherical_equivariants/invariants/: __init__.py  power_spectrum.py  (+2 more)
torchmdnet2/tests/: test_gn.py
