[project]
name = "torchmd-net"
description = "TorchMD-NET provides state-of-the-art neural networks potentials for biomolecular systems"
authors = [{ name = "Acellera", email = "info@acellera.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "h5py",
  # "nnpops",
  "torch>=2.5",
  "torch_geometric",
  "lightning",
  "tqdm",
  "numpy"
]

[project.urls]
"Homepage" = "https://github.com/torchmd/torchmd-net"
"Bug Tracker" = "https://github.com/torchmd/torchmd-net/issues"

[project.scripts]
torchmd-train = "torchmdnet.scripts.train:main"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["torchmdnet*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.c", "*.cpp", "*.h", "*.cuh", "*.cu", ".gitignore"]

[build-system]
requires = ["setuptools>=78", "setuptools-scm>=8", "torch>=2.5", "numpy"]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
# Disable builds which can't support CUDA and pytorch
skip = ["cp38-*", "pp*", "*win32", "*armv7l", "*_i686", "*_ppc64le", "*_s390x", "*_universal2", "*-musllinux_*"]
test-requires = ["pytest", "pytest-xdist"]
test-command = "pytest {project}/tests"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
environment-pass = ["CIBW_ARCHS"]
# container-engine = "docker; create_args: --gpus all"

[tool.cibuildwheel.linux]
repair-wheel-command = [
  "auditwheel repair --exclude libc10.so --exclude libc10_cuda.so --exclude libtorch.so --exclude libtorch_cuda.so --exclude libtorch_cpu.so --exclude libtorch_python.so -w {dest_dir} {wheel}",
]

[tool.cibuildwheel.macos]
repair-wheel-command = [
  "delocate-wheel --ignore-missing-dependencies --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
]