[project]
name = "torchmd-net"
description = "TorchMD-NET provides state-of-the-art neural networks potentials for biomolecular systems"
authors = [{ name = "Acellera", email = "info@acellera.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "h5py",
  # "nnpops",
  "torch",
  "torch_geometric",
  "lightning",
  "tqdm",
  "numpy",
  "triton; sys_platform == 'linux' and platform_machine != 'aarch64'",
  "triton-windows; sys_platform == 'win32'",
  "ase",
]

[project.urls]
"Homepage" = "https://github.com/torchmd/torchmd-net"
"Bug Tracker" = "https://github.com/torchmd/torchmd-net/issues"

[project.scripts]
torchmd-train = "torchmdnet.scripts.train:main"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["torchmdnet*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.c", "*.cpp", "*.h", "*.cuh", "*.cu", ".gitignore"]

[build-system]
requires = ["setuptools>=78", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["flake8>=7.3.0", "ipython>=8.18.1", "pytest>=8.4.2"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "(sys_platform == 'linux' or sys_platform == 'win32') and platform_machine != 'aarch64' and platform_machine != 'arm64'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "(sys_platform == 'linux' or sys_platform == 'win32') and platform_machine != 'aarch64' and platform_machine != 'arm64'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
